# phase1-w25

./: .gitignore
my-mini-compiler/: CMakeLists.txt
my-mini-compiler/phase1-w25/include/: custom_regex.h  errors.h  tokens.h
my-mini-compiler/phase1-w25/src/helpers/: errors.c
my-mini-compiler/phase1-w25/src/lexer/: lexer.c
my-mini-compiler/phase1-w25/src/regex/: custom_regex.c
my-mini-compiler/phase1-w25/test/: input_invalid.txt  input_valid.txt
